--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,7 @@
 # database
 spring:
   profiles:
-    active: local
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/my_database
-#    username: root
-#    password: abc1234
+    active: dev
 
 # server port
 server:
