--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,18 +1,18 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_database
+    url: jdbc:mysql://localhost:3306/quiz_database?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: Abcd1234!
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create  # (or validate, none, create-drop, create)
+      ddl-auto: update  # (or validate, none, create-drop, create)
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-    sql:
-      init:
+  sql:
+    init:
         mode: always  # 애플리케이션 실행 시 SQL 스크립트 실행
 
