--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/quiz_database?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
+    username: metanet
     password: Abcd1234!
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
