--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,7 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  sql:
-    init:
-        mode: always  # 애플리케이션 실행 시 SQL 스크립트 실행
+#  sql:
+#    init:
+#        mode: always  # 애플리케이션 실행 시 SQL 스크립트 실행
 
