--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,7 +6,7 @@ spring:
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create  # (or validate, none, create-drop, create)
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -15,9 +15,7 @@ spring:
   h2:
     console:
       enabled: false
-#  sql:
-#    init:
-#        mode: always  # 애플리케이션 실행 시 SQL 스크립트 실행
+
   hikari:
     maximum-pool-size: 10
     minimum-idle: 5
