--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,9 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - dev
+      - qa
+      - prod
 
 jobs:
   build-and-update:
@@ -19,11 +21,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Azure login
+        uses: azure/login@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Login to Azure Container Registry (ACR)
+        run: az acr login --name metabank
 
       - name: Prepare Image Tag
         id: prepare-tag
@@ -32,68 +36,88 @@ jobs:
           echo "TAG=$TAG" >> $GITHUB_ENV
           echo "Generated TAG: $TAG"
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker Image to Azure ACR
         id: build_and_push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: |
-            ykim73094/metanet-msa-migration-quiz-reward:latest
-            ykim73094/metanet-msa-migration-quiz-reward:${{ env.TAG }}
+            metabank.azurecr.io/metanet-msa-migration-quiz-reward:latest
+            metabank.azurecr.io/metanet-msa-migration-quiz-reward:${{ env.TAG }}
 
-      - name: Checkout ArgoCD Repository
+      - name: Checkout ArgoCD Repository (Always use main)
         uses: actions/checkout@v3
         with:
           repository: Metanet-Signal-Platoon/ArgoCD-metabank
           token: ${{ secrets.GH_PAT }}
-          fetch-depth: 0  # 전체 브랜치 가져오기
+          ref: main  # ✅ 항상 main 브랜치를 체크아웃
+          fetch-depth: 0  
 
-      - name: Check File Path
-        run: ls -R
-
-      - name: Find Deployment File
+      - name: Set Environment Variables Based on Branch
         run: |
-          FILE_PATH="argo-metanet-msa-migration-quiz-reward/deployment.yaml"
+          # 디렉토리는 고정
+          BASE_DIR="argo-metanet-msa-migration-quiz-reward-helm"
+          echo "BASE_DIR=$BASE_DIR" >> $GITHUB_ENV
 
-          if [ -z "$FILE_PATH" ]; then
-            echo "Error: deployment.yaml not found!"
+          # 브랜치별 values 파일 설정
+          echo "VALUES_FILE=$BASE_DIR/values-${{ github.ref_name }}.yaml" >> $GITHUB_ENV
+          echo "VALUE_FILE_NAME=values-${{ github.ref_name }}.yaml" >> $GITHUB_ENV
+
+          # application.yaml 경로 고정
+          echo "APP_FILE=$BASE_DIR/templates/application.yaml" >> $GITHUB_ENV
+
+      - name: Check File Paths
+        run: |
+          echo "Checking if values.yaml and application.yaml exist..."
+          
+          ls -lah $BASE_DIR  # 파일 리스트 확인
+
+          if [ ! -f "${{ env.VALUES_FILE }}" ]; then
+            echo "Error: values.yaml not found at ${{ env.VALUES_FILE }}"
+            exit 1
+          fi
+          if [ ! -f "${{ env.APP_FILE }}" ]; then
+            echo "Error: application.yaml not found at ${{ env.APP_FILE }}"
             exit 1
           fi
 
-          echo "Found deployment file: $FILE_PATH"
-          echo "DEPLOYMENT_FILE=$FILE_PATH" >> $GITHUB_ENV
+          echo "✅ Found values file: ${{ env.VALUES_FILE }}"
+          echo "✅ Found application file: ${{ env.APP_FILE }}"
 
-      - name: Update Image in Deployment File
+      - name: Update Image in Values File
         run: |
-          if [ -f "${{ env.DEPLOYMENT_FILE }}" ]; then
-            echo "Updating image in ${{ env.DEPLOYMENT_FILE }}"
-            sed -i "s|image: ykim73094/metanet-msa-migration-quiz-reward:.*|image: ykim73094/metanet-msa-migration-quiz-reward:${{ env.TAG }}|" "${{ env.DEPLOYMENT_FILE }}"
+          echo "Updating image tag in ${{ env.VALUES_FILE }}"
+          sed -i "s|tag: \".*\"|tag: \"${{ env.TAG }}\"|" "${{ env.VALUES_FILE }}"
 
-            # 변경 사항 확인
-            git diff "${{ env.DEPLOYMENT_FILE }}"
+      - name: Update valueFiles in application.yaml (Ensure Only One values File)
+        run: |
+          echo "Updating valueFiles in ${{ env.APP_FILE }}"
 
-            if git diff --quiet "${{ env.DEPLOYMENT_FILE }}"; then
-              echo "No changes detected in ${{ env.DEPLOYMENT_FILE }}"
-              exit 0  # 변경 사항이 없으면 오류 없이 종료
-            fi
-          else
-            echo "Error: deployment.yaml not found!"
-            exit 1
-          fi
+          # `valueFiles:` 부분을 찾아서 올바른 values-{BRANCH}.yaml로 변경
+          sed -i "/valueFiles:/ {n; s|- .*|- ${{ env.VALUE_FILE_NAME }}|}" "${{ env.APP_FILE }}"
+
+          echo "=== Updated application.yaml ==="
+          cat "${{ env.APP_FILE }}"
+
+      - name: Verify Changes Before Commit
+        run: |
+          echo "Checking for modified files..."
+          git status
+          git diff
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           
-          git add "${{ env.DEPLOYMENT_FILE }}"
+          git add "${{ env.VALUES_FILE }}" "${{ env.APP_FILE }}"
 
-          # 변경 사항이 있을 경우에만 commit & push 수행
+          # 변경 사항이 있는 경우에만 푸시
           if git diff --staged --quiet; then
             echo "No changes to commit"
-            exit 0  # 변경 사항이 없으면 정상 종료
+            exit 0
           else
-            git commit -m "Update image to ykim73094/metanet-msa-migration-quiz-reward:${{ env.TAG }}"
-            git push origin main
+            git commit -m "Update image tag and valueFiles to ${{ env.VALUE_FILE_NAME }} in ${{ env.APP_FILE }}"
+            git push origin main  # ✅ 항상 main 브랜치로 푸시
           fi
