--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Deploy to ArgoCD
 
 on:
   push:
@@ -6,13 +6,13 @@ on:
       - dev
       - qa
       - prod
+  workflow_dispatch:
 
 jobs:
-  build-and-update:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Application Repository
+      - name: Checkout Application Repository (metanet-msa-migration-quiz-reward)
         uses: actions/checkout@v3
 
       - name: Set up QEMU
@@ -51,73 +51,39 @@ jobs:
         with:
           repository: Metanet-Signal-Platoon/ArgoCD-metabank
           token: ${{ secrets.GH_PAT }}
-          ref: main  # ✅ 항상 main 브랜치를 체크아웃
+          ref: main
           fetch-depth: 0  
 
       - name: Set Environment Variables Based on Branch
         run: |
-          # 디렉토리는 고정
           BASE_DIR="argo-metanet-msa-migration-quiz-reward-helm"
           echo "BASE_DIR=$BASE_DIR" >> $GITHUB_ENV
 
-          # 브랜치별 values 파일 설정
-          echo "VALUES_FILE=$BASE_DIR/values-${{ github.ref_name }}.yaml" >> $GITHUB_ENV
-          echo "VALUE_FILE_NAME=values-${{ github.ref_name }}.yaml" >> $GITHUB_ENV
+          BRANCH=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')
+          echo "BRANCH=$BRANCH" >> $GITHUB_ENV
 
-          # application.yaml 경로 고정
-          echo "APP_FILE=$BASE_DIR/templates/application.yaml" >> $GITHUB_ENV
-
-      - name: Check File Paths
-        run: |
-          echo "Checking if values.yaml and application.yaml exist..."
+          VALUES_FILE="$BASE_DIR/values-$BRANCH.yaml"
+          echo "VALUES_FILE=$VALUES_FILE" >> $GITHUB_ENV
           
-          ls -lah $BASE_DIR  # 파일 리스트 확인
+          echo "Updating values file for branch: $BRANCH"
 
-          if [ ! -f "${{ env.VALUES_FILE }}" ]; then
-            echo "Error: values.yaml not found at ${{ env.VALUES_FILE }}"
-            exit 1
-          fi
-          if [ ! -f "${{ env.APP_FILE }}" ]; then
-            echo "Error: application.yaml not found at ${{ env.APP_FILE }}"
-            exit 1
-          fi
-
-          echo "✅ Found values file: ${{ env.VALUES_FILE }}"
-          echo "✅ Found application file: ${{ env.APP_FILE }}"
-
-      - name: Update Image in Values File
+      - name: Update Image in values-{branch}.yaml
         run: |
           echo "Updating image tag in ${{ env.VALUES_FILE }}"
           sed -i "s|tag: \".*\"|tag: \"${{ env.TAG }}\"|" "${{ env.VALUES_FILE }}"
-
-      - name: Update valueFiles in application.yaml (Ensure Only One values File)
-        run: |
-          echo "Updating valueFiles in ${{ env.APP_FILE }}"
-
-          # `valueFiles:` 부분을 찾아서 올바른 values-{BRANCH}.yaml로 변경
-          sed -i "/valueFiles:/ {n; s|- .*|- ${{ env.VALUE_FILE_NAME }}|}" "${{ env.APP_FILE }}"
-
-          echo "=== Updated application.yaml ==="
-          cat "${{ env.APP_FILE }}"
-
-      - name: Verify Changes Before Commit
-        run: |
-          echo "Checking for modified files..."
-          git status
-          git diff
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           
-          git add "${{ env.VALUES_FILE }}" "${{ env.APP_FILE }}"
+          git add "${{ env.VALUES_FILE }}"
 
-          # 변경 사항이 있는 경우에만 푸시
           if git diff --staged --quiet; then
             echo "No changes to commit"
             exit 0
           else
-            git commit -m "Update image tag and valueFiles to ${{ env.VALUE_FILE_NAME }} in ${{ env.APP_FILE }}"
-            git push origin main  # ✅ 항상 main 브랜치로 푸시
+            git commit -m "Update image tag in ${{ env.VALUES_FILE }}"
+            git push origin main
           fi
+      
